# RhythmiRust-Wiki

./: .gitignore  .prettierrc.json  README.md  _Wiki_build_helper.json  data.json  wiki_compiler.py
About/: data.json
About/Community/: data.json
About/_developers/UnknownSuperficialNight/: data.json
Guides/Optimise Performance/: data.json
Help/FAQ/Folder Album Art/: data.json
Main Window/: data.json
Main Window/Downloader/: data.json
Main Window/Downloader/Duplicate Detector/: GenList.json  data.json
Main Window/Downloader/Playlist Editor/: Active.odg  Codec.odg  Executable.odg  Key.odg  Main.odg  Main_obj.odg  Main_obj_keys.odg  Manage Keys.odg  Save Changes to disk.odg  YT_dlp_args.odg  data.json
Main Window/Downloader/Settings/: Deduplicate detector.odg  Download Dir.odg  Download Threads.odg  GenList.json  Import_Export.odg  Main.odg  Spotify.odg  data.json
Main Window/Downloader/Starter/: Cursor Mover.odg  Cursor skip multiplier.odg  Custom Order.odg  Main.odg  Regenerate list.odg  Start.odg  data.json
Main Window/Downloader/Web Codec Checker/: Codecs found.odg  Main.odg  Search Bar.odg  Url.odg  data.json
Main Window/Favourites/: Category.odg  Current Category Page.odg  Dropdown Body.odg  Dropdown.odg  GenList.json  Main.odg  NULL Value.odg  Select Key.odg  data.json
Main Window/Favourites/Dropdown/: Add New Entry to Current Page.odg  Create New Category.odg  Main.odg  Remove Category.odg  data.json
Main Window/History/: Main.odg  data.json
Main Window/Metadata Editor/: GenList.json  data.json
Main Window/Music Player/: Main.odg  Music Player Settings.odg  Playback bar.odg  Queue of songs.odg  Volume Slider.odg  data.json
Main Window/Search/: Main.odg  Search Result.odg  data.json
Main Window/Settings/: data.json
Wiki Navigation/: Direct Links.odg  General Navigation.odg  Main.odg  data.json
_Guides/Global Config/: data.json
_Guides/Newb Download Guide/: data.json
_Guides/Optimise Performance/: data.json
_Guides/Search While Indexing/: data.json
_Help/FAQ/: data.json
_Helpers/Country Codes/: data.json
_Helpers/Language Codes/: data.json
wiki_compiler/: Cargo.toml
wiki_compiler/src/: crop_generation.rs  main.rs  registry.rs  render.rs
(+44 files in other folders)
