[package]
name = "compile_wiki"
version = "0.0.1"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
usvg = { version = "0.45.1", features = [], default-features = false }
resvg = { version = "0.45.1", features = ["raster-images"], default-features = false }
tiny-skia = "0.11.4"
oxipng = { version = "9.1.4", features = ["parallel", "filetime"], default-features = false }
rayon = "1.10.0"
num_cpus = "1.16.0"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
opt-level = 3     #'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
