[package]
name = "compile_wiki"
version = "0.2.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
usvg = { version = "0.46.0", features = [], default-features = false }
resvg = { version = "0.46.0", features = ["raster-images"], default-features = false }
tiny-skia = "0.11.4"
oxipng = { version = "10.0.0", features = ["parallel", "filetime"], default-features = false }
rayon = "1.11.0"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3     #'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
